# libsel4resmcore

./: CMakeLists.txt  README.md
include/resmcore/: resmcore.h  vka.h
include/vbtallocman/: vbtallocman.h  vka.h
src/: bootstrap.c  resmcore.c  vbtallocman.c  vka.c
